--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,2 @@
 [runtime]
-python = "3.11" # Or "3.10" or "3.9" - try 3.11 first as it's recent but widely supported.
+python = "3.9" # Very stable, widely supported
